fixed price overflowing in entry editing

--- a/client/src/styles/expenseSheet.scss
+++ b/client/src/styles/expenseSheet.scss
@@ -233,7 +233,7 @@
               }
             }
             .item-price {
-              width: 3rem;
+              max-width: 11rem;
             }
           }
           .item-price-container {
